--- a/UI/src/app/dashboard/dora/dora.component.html
+++ b/UI/src/app/dashboard/dora/dora.component.html
@@ -135,7 +135,7 @@
               <div class="p-sm-6" *ngIf="kpiConfigData['kpi116']">
                 <app-kpi-card [trendBoxColorObj]="trendBoxColorObj" [kpiData]="updatedConfigDataObj['kpi116']"
                   [trendData]="kpiTrendsObj['kpi116']" [dropdownArr]="kpiDropdowns['kpi116']"
-                  (downloadExcel)="downloadExcel(updatedConfigDataObj['kpi116']?.kpiId, updatedConfigDataObj['kpi116']?.kpiName, updatedConfigDataObj['kpi116']?.kpiDetail.kanban,updatedConfigDataObj['kpi116']?.kpiDetail?.additionalFilterSupport)"
+                  (downloadExcel)="downloadExcel(updatedConfigDataObj['kpi116']?.kpiId, updatedConfigDataObj['kpi116']?.kpiName, updatedConfigDataObj['kpi116']?.kpiDetail.kanban,updatedConfigDataObj['kpi116']?.kpiDetail?.isAdditionalFilterSupport)"
                   (optionSelected)="handleSelectedOption($event, updatedConfigDataObj['kpi116'])" [showExport]="true"
                   [showChartView]="showChart"
                   [sprintsOverlayVisible]="sprintsOverlayVisible && updatedConfigDataObj['kpi116']?.kpiDetail?.chartType !== 'table'"
@@ -183,7 +183,7 @@
                 <app-kpi-card [trendBoxColorObj]="trendBoxColorObj" [kpiData]="updatedConfigDataObj['kpi118']"
                   [trendData]="kpiTrendsObj['kpi118']" [dropdownArr]="kpiDropdowns['kpi118']"
                   (optionSelected)="handleSelectedOption($event, updatedConfigDataObj['kpi118'])"
-                  (downloadExcel)="downloadExcel(updatedConfigDataObj['kpi118']?.kpiId, updatedConfigDataObj['kpi118']?.kpiName, updatedConfigDataObj['kpi118']?.kpiDetail.kanban,updatedConfigDataObj['kpi118']?.kpiDetail?.additionalFilterSupport)"
+                  (downloadExcel)="downloadExcel(updatedConfigDataObj['kpi118']?.kpiId, updatedConfigDataObj['kpi118']?.kpiName, updatedConfigDataObj['kpi118']?.kpiDetail.kanban,updatedConfigDataObj['kpi118']?.kpiDetail?.isAdditionalFilterSupport)"
                   [showExport]="true" [showChartView]="showChart"
                   [isShow]="(kpiLoader === false) && (ifKpiExist('kpi118') != -1) ? true : false"
                   [sprintsOverlayVisible]="sprintsOverlayVisible && updatedConfigDataObj['kpi118']?.kpiDetail?.chartType !== 'table'"
@@ -236,7 +236,7 @@
               <div class="p-sm-6" *ngIf="kpiConfigData['kpi156']">
                 <app-kpi-card [trendBoxColorObj]="trendBoxColorObj" [kpiData]="updatedConfigDataObj['kpi156']"
                   [trendData]="kpiTrendsObj['kpi156']" [dropdownArr]="kpiDropdowns['kpi156']"
-                  (downloadExcel)="downloadExcel(updatedConfigDataObj['kpi156']?.kpiId, updatedConfigDataObj['kpi156']?.kpiName, updatedConfigDataObj['kpi156']?.kpiDetail.kanban,updatedConfigDataObj['kpi156']?.kpiDetail?.additionalFilterSupport)"
+                  (downloadExcel)="downloadExcel(updatedConfigDataObj['kpi156']?.kpiId, updatedConfigDataObj['kpi156']?.kpiName, updatedConfigDataObj['kpi156']?.kpiDetail.kanban,updatedConfigDataObj['kpi156']?.kpiDetail?.isAdditionalFilterSupport)"
                   (optionSelected)="handleSelectedOption($event, updatedConfigDataObj['kpi156'])" [showExport]="true"
                   [showChartView]="showChart"
                   [sprintsOverlayVisible]="sprintsOverlayVisible && updatedConfigDataObj['kpi156']?.kpiDetail?.chartType !== 'table'"
@@ -285,7 +285,7 @@
                 <app-kpi-card [trendBoxColorObj]="trendBoxColorObj" [kpiData]="updatedConfigDataObj['kpi166']"
                   [trendData]="kpiTrendsObj['kpi166']" [dropdownArr]="kpiDropdowns['kpi166']"
                   (optionSelected)="handleSelectedOption($event, updatedConfigDataObj['kpi166'])"
-                  (downloadExcel)="downloadExcel(updatedConfigDataObj['kpi166']?.kpiId, updatedConfigDataObj['kpi166']?.kpiName, updatedConfigDataObj['kpi166']?.kpiDetail.kanban,updatedConfigDataObj['kpi166']?.kpiDetail?.additionalFilterSupport)"
+                  (downloadExcel)="downloadExcel(updatedConfigDataObj['kpi166']?.kpiId, updatedConfigDataObj['kpi166']?.kpiName, updatedConfigDataObj['kpi166']?.kpiDetail.kanban,updatedConfigDataObj['kpi166']?.kpiDetail?.isAdditionalFilterSupport)"
                   [showExport]="true" [showChartView]="showChart"
                   [isShow]="(kpiLoader === false) && (ifKpiExist('kpi166') != -1) ? true : false"
                   [sprintsOverlayVisible]="sprintsOverlayVisible && updatedConfigDataObj['kpi166']?.kpiDetail?.chartType !== 'table'"
