--- a/UI/src/app/config/project-config/connection-list/connection-list.component.html
+++ b/UI/src/app/config/project-config/connection-list/connection-list.component.html
@@ -74,7 +74,7 @@
                         </tr>
                     </ng-template>
                     <ng-template pTemplate="body" let-connection>
-                        <tr>
+                        <tr [ngClass]="{'broken-conn-row': connection.brokenConnection}" tooltipPosition="top" [pTooltip]="connection.connectionErrorMsg">        
                             <td style="display: none;">
                                 <p-tableCheckbox [value]="connection"></p-tableCheckbox>
                             </td>
