--- a/UI/src/styles.css
+++ b/UI/src/styles.css
@@ -2037,3 +2037,8 @@ p-dialog .p-button-cancel.p-button-secondary {
 .font-black{
   color: #000;
 }
+
+.broken-conn-row{
+  background-color: rgb(201, 56, 56) !important;
+  color : white !important;
+}
