--- a/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
@@ -58,10 +58,7 @@
                     <p-dropdown [styleClass]="'date-filter-ddn'" [options]="dateRangeFilter?.types" (onChange)="setSelectedDateType($event.value)"></p-dropdown>
                 </div>
                 <div class="p-d-flex p-justify-end p-align-center btn-container">
-                    <button pButton pRipple label="Cancel" icon="pi pi-times"
-                        class="p-button-secondary p-button-text p-mr-2 p-button-sm"
-                        (click)="toggleDateDropdown = false"></button>
-                    <button pButton pRipple label="Apply" icon="pi pi-save" class="p-button-secondary p-button-sm btn-apply"
+                    <button pButton pRipple label="Apply" class="p-button-secondary p-button-sm btn-apply"
                         (click)="applyDateFilter()"></button>
                 </div>
             </div>
