--- a/UI/src/app/config/advanced-settings/advanced-settings.component.html
+++ b/UI/src/app/config/advanced-settings/advanced-settings.component.html
@@ -86,14 +86,14 @@
               </td>
 
               <td class='custom-table-cell'>
-                  <span *ngIf="(!processor.loader && processor.processorName === 'Jira') || processor.processorName !== 'Jira'">{{ showExecutionDate(processor.processorName) }}</span>
+                  <span *ngIf="(!findTraceLogForTool(processor.processorName)?.executionOngoing && processor.processorName === 'Jira') || processor.processorName !== 'Jira'">{{ showExecutionDate(processor.processorName) }}</span>
               </td>
               <td class="custom-table-cell">
-                  <p-progressBar mode="indeterminate" *ngIf="processor.processorName === 'Jira' && processor.loader === true " [style]="{ height: '6px' }"></p-progressBar>
+                  <p-progressBar mode="indeterminate" *ngIf="processor.processorName === 'Jira' && findTraceLogForTool(processor.processorName)?.executionOngoing === true " [style]="{ height: '6px' }"></p-progressBar>
               </td>
               <td class='custom-table-cell'>
                 <div class="p-d-flex p-align-center">
-                  <div *ngIf="(!processor.loader && processor.processorName === 'Jira') || processor.processorName !== 'Jira'">
+                  <div *ngIf="(!findTraceLogForTool(processor.processorName)?.executionOngoing && processor.processorName === 'Jira') || processor.processorName !== 'Jira'">
                     <div *ngIf="showProcessorLastState(processor.processorName) !== 'NA'" class="status-container"
                       [ngClass]="showProcessorLastState(processor.processorName) === 'Success' ? 'active' : 'inactive'">
                       {{ showProcessorLastState(processor.processorName)}}
@@ -102,14 +102,14 @@
                   </div>
                 <div class="p-ml-2" *ngIf="processor.processorName === 'Jira'">
                   <i class="pi pi-info-circle" [ngClass]="{'cursor-pointer': (!findTraceLogForTool('Jira')?.executionSuccess && findTraceLogForTool('Jira')?.errorMessage) || jiraExecutionSteps?.length}" 
-                  (click)="((!findTraceLogForTool('Jira')?.executionSuccess && findTraceLogForTool('Jira')?.errorMessage) || jiraExecutionSteps?.length) ? op.toggle($event) : ''" style="font-size: 1.2rem"></i>
+                  (click)="(findTraceLogForTool('Jira')?.errorMessage || findTraceLogForTool('Jira')?.progressStatusList?.length) ? op.toggle($event) : ''" style="font-size: 1.2rem"></i>
                 </div>
               </div>
               </td>
               <td class='custom-table-cell p-d-flex p-align-center column-width'>
                 <button pButton pRipple label="Run Now"
-                  icon="{{processor.loader === true ? 'pi pi-spin pi-spinner' : 'pi pi-forward'}}"
-                  [disabled]="shouldDisableRunProcessor() || processor.loader === true"
+                  icon="{{findTraceLogForTool(processor.processorName)?.executionOngoing === true ? 'pi pi-spin pi-spinner' : 'pi pi-forward'}}"
+                  [disabled]="shouldDisableRunProcessor() || findTraceLogForTool(processor.processorName)?.executionOngoing === true"
                   class="p-button-sm p-button-success p-button-raised" (click)="runProcessor(processor.processorName)"></button>               
                   <div  class="action-btns p-ml-3" [ngClass]="{'disabled':!(getToolDetailsForProcessor(processor?.processorName)?.length > 0 && findTraceLogForTool(processor?.processorName))}" *ngIf="!shouldDisableRunProcessor()"><i class="far fa-trash-alt" (click)="deleteProcessorData(processor)"></i></div>
               </td>
@@ -137,7 +137,8 @@
 
 <p-overlayPanel #op [showCloseIcon]="false">
   <div class="dialog-body p-mb-4">
-      <p-table [value]="jiraExecutionSteps" [tableStyle]="{ 'min-width': '40rem' }"  *ngIf="jiraExecutionSteps?.length">
+      <p-table [value]="findTraceLogForTool('Jira')?.progressStatusList" [tableStyle]="{ 'min-width': '40rem' }"
+       [scrollable]="true" scrollHeight="350px" *ngIf="findTraceLogForTool('Jira')?.progressStatusList?.length ; else logError">
         <ng-template pTemplate="header">
             <tr>
               <th>Step Name</th>
@@ -151,8 +152,11 @@
               <td>{{item.startTime |  date : 'MMM d, h:mm:ss a'}}</td>
               <td>{{item.status}}</td>
             </tr>
+            
         </ng-template>
     </p-table>
-      <h3 class="p-text-center" *ngIf="showProcessorLastState('Jira') === 'Failure' && !jiraExecutionSteps?.length" class="error-text">{{findTraceLogForTool('Jira')?.errorMessage}}</h3>
+    <ng-template #logError>
+      <h3 class="p-text-center" class="error-text">{{findTraceLogForTool('Jira')?.errorMessage}}</h3>
+    </ng-template>
   </div>
 </p-overlayPanel>
