--- a/UI/src/app/component/recommendations/recommendations.component.html
+++ b/UI/src/app/component/recommendations/recommendations.component.html
@@ -25,18 +25,17 @@
                         <tr>
                             <th>
                                 <input pInputText [id]="kpiName" type="text"
-                                (input)="dt1.filter($event.target.value, 'kpiName', 'contains')" class="p-column-filter"
+                                (input)="dt1.filter($event.target.value, 'kpiName', 'contains')" 
                                 [style]="{'width':'100%'}" placeholder="Search" />
-                                <label [for]="'kpiName'"></label>
                             </th>
                             <th>
-                                <p-columnFilter field="maturity" matchMode="in" [showMenu]="false">
+                                <p-columnFilter [field]="maturity" matchMode="in" [showMenu]="false">
                                     <ng-template pTemplate="filter" let-value let-filter="filterCallback">
                                         <p-multiSelect [ngModel]="value" [options]="maturities" placeholder="Select maturity"
-                                        [showClear]="true">
+                                        (onChange)="filter($event.value)">
                                             <ng-template let-option pTemplate="item">
                                                 <div class="inline-block vertical-align-middle">
-                                                    <span class="ml-1 mt-1">{{ option }}</span>
+                                                    <span class="ml-1 mt-1">{{option }}</span>
                                                 </div>
                                             </ng-template>
                                         </p-multiSelect>
